# OpenGL_Learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: Camera.hpp  Display.hpp  ErrorHandling.hpp  IndexBuffer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  ShaderType.hpp  SystemHelper.hpp  Texture.hpp  Triangle.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  debug-trap.h
lib/: CMakeLists.txt
lib/glew/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui.pc.in  version
lib/imgui/src/: imgui_impl_opengl3.cpp
resources/: CMakeLists.txt
resources/shaders/: CMakeLists.txt  shader.frag  shader.vert
resources/textures/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Display.cpp  Display.hpp  ErrorHandling.cpp  IndexBuffer.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Triangle.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
